# TermME

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: content_widget.h  editable_widget.h
src/: editable_widget.cpp  main.cpp
